--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,43 @@
 ## Core dependencies
 numpy<2.0.0
++ numpy==1.26.4  # Add explicit version
 
-# Add PySQLite fallback for Chroma (if you cannot upgrade system sqlite)
-# pinned to the latest available version supported by your environment
+# Add PySQLite fallback
 pysqlite3-binary<=0.5.4
 
 # Deep learning / embedding libraries
-torch>=2.7.0,<3.0.0
-sentence-transformers
-transformers
+-torch>=2.7.0,<3.0.0
+-sentence-transformers
+-transformers
++torch==2.0.1  # Downgrade for compatibility
++sentence-transformers==2.2.2
++transformers==4.30.2  # Stable version with pipeline
 
 # LangChain ecosystem
-langchain
-langchain-community
-langchain-chroma
-langchain_huggingface
-chromadb
+-langchain
+-langchain-community
+-langchain-chroma
+-langchain_huggingface
+-chromadb
++langchain==0.3.25
++langchain-community==0.3.21
++langchain-chroma==0.2.2
++langchain_huggingface==0.2.0
++chromadb==0.6.3
 
 # Web/front-end
 tavily-python
-streamlit>=1.45.1,<2.0.0
+-streamlit>=1.45.1,<2.0.0
++streamlit==1.45.1  # Explicit version
 
 # Google Generative AI and utilities
 google-generativeai
 huggingface_hub
+
+# Add missing critical dependencies
++tokenizers==0.13.3
++protobuf==5.29.5
++scikit-learn==1.6.1
++pandas==2.2.3
+
+
