refactor: update requirements.txt for improved package compatibility

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
 numpy==1.26.4
 pysqlite3-binary==0.5.4
-torch==2.0.1
-sentence-transformers
-transformers
+torch==2.1.2
+transformers==4.40.2
+sentence-transformers==2.7.0
 langchain==0.3.25
 langchain-community==0.3.21
 langchain-chroma==0.2.2
-langchain-huggingface
+langchain-huggingface==0.2.0
 chromadb==0.6.3
-tavily-python
+tavily-python==0.7.3
 streamlit==1.45.1
-google-generativeai
-huggingface_hub
-tokenizers
+google-generativeai==0.8.5
+huggingface-hub==0.22.2
+tokenizers==0.20.0
 protobuf==5.29.5
 scikit-learn==1.6.1
 pandas==2.2.3
+tqdm==4.66.4
