--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,14 @@
-numpy==1.26.4
-pysqlite3-binary==0.5.4
-torch==2.1.2
-transformers==4.41.0  # Supports tokenizers 0.20.0
-sentence-transformers==2.7.0
-langchain==0.3.25
-langchain-community==0.3.21
-langchain-chroma==0.2.2
-langchain-huggingface==0.2.0
-chromadb==0.6.3
-tavily-python==0.7.3
-streamlit==1.45.1
-google-generativeai==0.8.5
-huggingface-hub==0.22.2
-tokenizers==0.20.0  # Exact version that works with both
-protobuf==5.29.5
-scikit-learn==1.6.1
-pandas==2.2.3
-tqdm==4.66.4
+# Core packages with version constraints from Colab
+numpy<2.0.0
+torch
+sentence-transformers
+langchain
+langchain-community
+langchain-chroma
+chromadb
+streamlit
+tavily-python
+google-generativeai
+huggingface_hub
+langchain-huggingface
+transformers
